# ModelGate

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AI_Model_Workspace_PRD_技术规格文档.md  CLAUDE.md  LICENSE  ModelGate_前端视觉参考改造计划.md  ModelGate_前端页面设计.md  ModelRegistry配置规范.md  ProviderAdapter开发规范.md  README.md  README.zh-CN.md  docker-compose.yml  minimax3-修改建议.md  package-lock.json  package.json  playwright.config.ts  产品需求文档.md  前端状态管理与页面交互规范.md  安全边界与App设计边界.md  开发规范文档.md  异步任务与Worker设计文档.md  技术规格文档.md  技术风险与问题清单.md  文件上传与解析设计文档.md  环境变量与部署文档.md  系统架构设计文档.md  项目总TODO.md
.github/workflows/: ci.yml
apps/server/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
apps/server/alembic/: env.py
apps/server/alembic/versions/: 0001_initial_schema.py  0002_provider_secrets.py  0003_runs_metadata_json.py  0004_project_mode_tables.py  0005_intake_model_id.py  0006_project_stop_reason.py  0007_conversation_persistence.py  0008_conversation_summary.py
apps/server/app/: main.py
apps/server/app/api/: chat.py  conversations.py  files.py  generation.py  history.py  logs.py  models.py  param_schemas.py  projects.py  providers.py  usage.py
apps/server/app/core/: config.py  errors.py  logging.py  middleware.py  startup.py
apps/server/app/db/: models.py  session.py
apps/server/app/providers/: anthropic_compatible.py  base.py  errors.py  factory.py  openai_compatible.py  volcengine_seedance.py
apps/server/app/services/: chat_runtime.py  context_builder.py  conversation_summary.py  file_parser.py  file_validation.py  generation_runtime.py  model_registry.py  provider_secrets.py  registry_sync.py  storage.py
apps/server/app/services/project_runtime/: __init__.py  agents.py  artifacts.py  budget.py  orchestrator.py  prompts.py  pytest_runner.py  schemas.py
apps/server/app/workers/: celery_app.py  file_tasks.py  generation_tasks.py
apps/server/scripts/: validate_model_registry.py  validate_settings.py
configs/: capabilities.json  models.json  param-schemas.json  providers.json  task-types.json
docs/: README.md
e2e/: workspace.spec.ts
tests/: test_agent_json_parse_phase20.py  test_api_phase3.py  test_chat_phase6.py  test_chat_system_prompt_phase28.py  test_compare_group_phase12.py  test_context_builder_phase25.py  test_conversation_phase24.py  test_conversation_summary_phase27.py  test_empty_output_retry_phase23.py  test_file_phase5.py  test_generation_concurrency.py  test_generation_phase7.py  test_logging_format.py  test_model_registry.py  test_multimodal_phase6.py  test_param_schema_phase26.py  test_phase6_enhancement_boundaries.py  test_phase9_acceptance.py  test_project_auto_loop_phase22.py  test_project_delete_phase19.py  test_project_mode_phase13.py  test_project_mode_phase14.py  test_project_mode_phase15.py  test_project_mode_phase16.py  test_project_mode_phase17.py  test_project_patch_mode_phase18.py  test_project_verifier_phase21.py  test_provider_errors_phase6.py  test_provider_smoke_phase6.py  test_provider_test_phase11.py  test_provider_test_volcengine_phase12.py  test_security_phase8.py  test_seedance_adapter.py  test_seedance_smoke.py  test_storage_and_file_id.py  test_usage_delete_export_phase12.py  test_usage_models_phase10.py
tokenplan_api文档/: minimax_api文档.md  xiaomi_mimo_api文档.md  火山引擎api文档.md  火山引擎视频生成api文档.md
(+133 files in other folders)
