[project]
name = "modelgate-server"
version = "0.1.0"
description = "FastAPI AI orchestration layer for ModelGate"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.6",
  "uvicorn[standard]>=0.32.1",
  "pydantic>=2.10.3",
  "pydantic-settings>=2.6.1",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.3",
  "alembic>=1.14.0",
  "redis>=5.2.1",
  "celery>=5.4.0",
  "httpx>=0.28.1",
  "python-multipart>=0.0.19",
  "pillow>=11.0.0",
  "pypdf>=5.1.0",
  "python-docx>=1.1.2",
  "openpyxl>=3.1.5",
  "cryptography>=42.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.8.4"
]

[tool.ruff]
line-length = 100
target-version = "py311"
