[project]
name = "modelgate-server"
version = "0.1.0"
description = "FastAPI AI orchestration layer for ModelGate"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.6",
  "uvicorn[standard]>=0.32.1",
  "pydantic>=2.10.3",
  "pydantic-settings>=2.6.1",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.3",
  "alembic>=1.14.0",
  "redis>=5.2.1",
  "celery>=5.4.0",
  "httpx>=0.28.1",
  "python-multipart>=0.0.19",
  "pillow>=11.0.0",
  "pypdf>=5.1.0",
  "python-docx>=1.1.2",
  "openpyxl>=3.1.5",
  "cryptography>=42.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.8.4",
  "mypy>=1.13.0",
  "black>=24.10.0",
  "types-requests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "I",
  "B",
  "UP",
  "SIM",
  "PL",
  "RUF",
]
ignore = [
  "PLR0913",  # too many arguments
  "PLR2004",  # magic value
  "PLR0911",  # too many return statements
  "PLR0912",  # too many branches
  "PLR0915",  # too many statements
  "PLW0603",  # global statement (used intentionally for module-level caches)
  "PLC0415",  # non-top-level imports (used to keep startup import cost low)
  "E501",     # line length (covered by black)
  "B008",     # FastAPI Depends() in defaults is the documented pattern
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
  "apps/server/alembic/versions",
]

[tool.coverage.run]
branch = true
source = ["apps/server/app"]
omit = [
  "apps/server/alembic/*",
  "apps/server/scripts/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 60
